# pollux

./: CMakeLists.txt  readme.md  requirement.txt
cmake/: CMakeLists.txt  Config.cmake.in  codec.cmake  external_option.cmake  internal_option.cmake  pollux.pc.in  requirement.txt
doc/: 001_视频基础概念.docx
include/: .gitignore
include/pollux/: pollux_attributes.h  pollux_codec_id.h  pollux_container_fmt.h  pollux_decode.h  pollux_encode.h  pollux_erron.h  pollux_frame.h  pollux_pixel_fmt.h  pollux_rational.h  pollux_swscale.h
include/pollux/codec/: av1.h  codec.h  hevc.h
include/pollux/internal/: align.h  decls.h  frame.h  internal_ff_codec.h  internal_ff_decode.h  internal_ff_encode.h  internal_ff_erron.h  internal_frame.h  internal_sys.h  thread.h  util.h
include/pollux/internal/codec/: codec.h  ffmpeg_decode.h  ffmpeg_encode.h
include/pollux/internal/ffmpeg_cvt/: codec_id.h  frame.h  pixel.h
src/: pollux_decode.c  pollux_encode.c  pollux_frame.c  pollux_swscale.c
src/codec/: av1.c  codec.c  ffmpeg_decode.c  ffmpeg_encode.c  hevc.c
src/cvt/: cvt_codec_id.h  cvt_frame.h  cvt_pixel.h
src/internal/: internal_ff_decode.c  internal_ff_encode.c
unittests/: CMakeLists.txt
unittests/cmake/: clean_script.cmake.in  external_option.cmake
unittests/src/: _.cpp  test.h  test1.1_decode_video.c  test1.2_decode_video.cpp  test1.3_decode_video.cpp  test1.4_decode_image.cpp  test1.99_decode_err.c  test2.1_encode_video.cpp  test2.2_encode_video.c  test2.3_encode_image.cpp  test2.4_encode_gif.cpp  test2.99_encode_err.c  test3.1_transmit_video.c  test3.2_transmit_video.c
